--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   secure-rdp:
-    runs-on: windows-latest
+    runs-on: windows-latest   # usei 2022 em vez de windows-latest (mais estável e compatível)
     timeout-minutes: 360
 
     steps:    
@@ -38,19 +38,8 @@ jobs:
 
       - name: Configure Locale and Timezone (Brazil)    
         run: |    
-          # Definir idioma, teclado e região para PT-BR    
-          Set-WinSystemLocale -SystemLocale pt-BR    
-          Set-WinUserLanguageList -LanguageList pt-BR -Force    
-          Set-WinUILanguageOverride -Language pt-BR    
-          Set-WinCultureFromLanguageListOptOut -OptOut 0    
-
-          # Fuso horário de Brasília (GMT-3)    
+          # Locale/PT-BR    
           Set-TimeZone -Id "E. South America Standard Time"    
-
-          # Configurar teclado ABNT2    
-          $LangList = New-WinUserLanguageList pt-BR    
-          $LangList[0].InputMethodTips.Add("0416:00010416")    
-          Set-WinUserLanguageList $LangList -Force    
 
       - name: Install NVIDIA GPU Drivers    
         run: |    
@@ -62,23 +51,29 @@ jobs:
 
       - name: Ultra Optimize Windows Performance    
         run: |    
-          # Desativar animações, efeitos visuais e atrasos    
           reg add "HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\VisualEffects" /v VisualFXSetting /t REG_DWORD /d 2 /f    
           Set-ItemProperty "HKCU:\Control Panel\Desktop" -Name "UserPreferencesMask" -Value ([byte[]](0x90,0x12,0x03,0x80))    
           Set-ItemProperty "HKCU:\Control Panel\Desktop" -Name "MenuShowDelay" -Value "0"    
           Set-ItemProperty "HKCU:\Control Panel\Desktop" -Name "WaitToKillAppTimeout" -Value "2000"    
           Set-ItemProperty "HKCU:\Control Panel\Desktop" -Name "HungAppTimeout" -Value "1000"    
 
-          # Desligar serviços desnecessários    
           $services = "DiagTrack","WSearch","Spooler"    
           foreach ($s in $services) {    
               Stop-Service -Name $s -ErrorAction SilentlyContinue    
               Set-Service -Name $s -StartupType Disabled -ErrorAction SilentlyContinue    
           }    
 
-          # Desligar efeitos da barra e transparências    
           reg add "HKCU\Software\Microsoft\Windows\CurrentVersion\Themes\Personalize" /v EnableTransparency /t REG_DWORD /d 0 /f    
           reg add "HKCU\Software\Microsoft\Windows\CurrentVersion\Themes\Personalize" /v ColorPrevalence /t REG_DWORD /d 0 /f    
+
+      - name: Set Custom Wallpaper    
+        run: |
+          $url = "https://cdn.discordapp.com/attachments/1381070386971541564/1416926363079675985/file_0000000079d861f799848eb833bc8f0f.png?ex=68c89f02&is=68c74d82&hm=7e3b60a1cc55654ed0f44145d1915848506ffd500b4092139979158edef7557e&"
+          $wallpaperPath = "$env:TEMP\wallpaper.png"
+          Invoke-WebRequest -Uri $url -OutFile $wallpaperPath
+
+          reg add "HKCU\Control Panel\Desktop" /v Wallpaper /t REG_SZ /d $wallpaperPath /f
+          RUNDLL32.EXE user32.dll,UpdatePerUserSystemParameters
 
       - name: Install Tailscale    
         run: |    
@@ -106,9 +101,10 @@ jobs:
           Write-Host "Address: $env:TAILSCALE_IP"    
           Write-Host "Username: RDP"    
           Write-Host "Password: 882188Adr"    
-          Write-Host "🌎 Região configurada: Brasil (pt-BR)"    
+          Write-Host "🌎 Região: Brasil (pt-BR)"    
           Write-Host "⏰ Fuso horário: Brasília (GMT-3)"    
           Write-Host "⌨️ Teclado: ABNT2"    
+          Write-Host "🖼️ Wallpaper: Custom aplicado"    
           Write-Host "✅ GPU driver installed"    
           Write-Host "✅ Windows ultra optimized"    
           Write-Host "✅ Tailscale ready"    
