--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,46 +12,52 @@ jobs:
       - name: Update system and install XRDP + Desktop
         run: |
           sudo apt update -y
-          sudo apt install -y xrdp xfce4 xfce4-goodies
+          sudo DEBIAN_FRONTEND=noninteractive apt install -y xrdp xfce4 xfce4-goodies
           sudo systemctl enable xrdp
           sudo systemctl start xrdp
 
       - name: Create RDP user with random password
         run: |
           USERNAME="rdpuser"
-          PASSWORD=$(tr -dc A-Za-z0-9@#%^&+=_ < /dev/urandom | head -c 16)
-          sudo useradd -m -s /bin/bash $USERNAME
+          PASSWORD=$(openssl rand -base64 12 | tr -dc 'A-Za-z0-9@#%^&+=' | head -c 16)
+          
+          echo "Creating user $USERNAME..."
+          sudo useradd -m -s /bin/bash "$USERNAME"
           echo "$USERNAME:$PASSWORD" | sudo chpasswd
+          
           echo "RDP_USERNAME=$USERNAME" >> $GITHUB_ENV
           echo "RDP_PASSWORD=$PASSWORD" >> $GITHUB_ENV
-          echo "Created user: $USERNAME with password: $PASSWORD"
+          
+          echo "User created successfully with password: $PASSWORD"
 
-      - name: Install Tailscale
+      - name: Install and connect Tailscale
         run: |
           curl -fsSL https://tailscale.com/install.sh | sh
           sudo tailscale up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=ubuntu-rdp-${GITHUB_RUN_ID}
           sleep 10
-          TS_IP=$(tailscale ip -4)
+          TS_IP=$(tailscale ip -4 | head -n 1)
           echo "TAILSCALE_IP=$TS_IP" >> $GITHUB_ENV
-          echo "Tailscale IP: $TS_IP"
+          echo "Tailscale connected at $TS_IP"
 
       - name: Configure XRDP and Firewall
         run: |
-          sudo ufw allow 3389/tcp
+          sudo ufw allow 3389/tcp || true
+          echo xfce4-session > ~/.xsession
           sudo systemctl restart xrdp
-          echo "XRDP service restarted and firewall configured"
+          echo "XRDP configured and firewall adjusted."
 
-      - name: Display RDP connection info
+      - name: Display connection info
         run: |
           echo ""
           echo "=========================================="
-          echo "  🖥️  XRDP via Tailscale is ready!"
+          echo " 🖥️  Ubuntu XRDP via Tailscale is ready!"
           echo "------------------------------------------"
           echo "  IP Address: $TAILSCALE_IP"
           echo "  Username:   $RDP_USERNAME"
           echo "  Password:   $RDP_PASSWORD"
           echo "------------------------------------------"
           echo "Use Remote Desktop (RDP) to connect."
+          echo "Select 'Xfce Session' on login."
           echo "=========================================="
           echo ""
 
