--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,67 +1,116 @@
-name: Ubuntu-RDP
+name: RDP Hyper Optimized BR
 
 on:
   workflow_dispatch:
 
 jobs:
-  setup-rdp:
-    runs-on: ubuntu-latest
-    timeout-minutes: 3600
+  secure-rdp:
+    runs-on: windows-latest
+    timeout-minutes: 360
 
-    steps:
-      - name: Atualizar sistema e instalar XRDP + XFCE
-        run: |
-          sudo apt update -y
-          sudo DEBIAN_FRONTEND=noninteractive apt install -y xrdp xfce4 xfce4-goodies
-          sudo systemctl enable xrdp
-          sudo systemctl start xrdp
+    steps:    
+      - name: Enable RDP + Disable NLA    
+        run: |    
+          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
+                           -Name "fDenyTSConnections" -Value 0 -Force    
+          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
+                           -Name "UserAuthentication" -Value 0 -Force    
+          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
+                           -Name "SecurityLayer" -Value 0 -Force    
+          netsh advfirewall firewall add rule name="RDP-Allow" dir=in action=allow protocol=TCP localport=3389    
+          Restart-Service -Name TermService -Force    
 
-      - name: Criar usuário RDP com senha fixa
-        run: |
-          USERNAME="rdpuser"
-          PASSWORD="442144Mu"
+      - name: Create Autologin User    
+        run: |    
+          $username = "RDP"    
+          $password = "882188Adr"    
+          net user $username $password /add    
+          net localgroup administrators $username /add    
+          net localgroup "Remote Desktop Users" $username /add    
 
-          echo "Criando usuário $USERNAME..."
-          sudo useradd -m -s /bin/bash "$USERNAME" || true
-          echo "$USERNAME:$PASSWORD" | sudo chpasswd
-          sudo usermod -aG sudo "$USERNAME"
+          # Ativar autologin    
+          Set-ItemProperty -Path "HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon" `
+            -Name "AutoAdminLogon" -Value "1" -Type String    
+          Set-ItemProperty -Path "HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon" `
+            -Name "DefaultUserName" -Value $username -Type String    
+          Set-ItemProperty -Path "HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon" `
+            -Name "DefaultPassword" -Value $password -Type String    
 
-          echo "RDP_USERNAME=$USERNAME" >> $GITHUB_ENV
-          echo "RDP_PASSWORD=$PASSWORD" >> $GITHUB_ENV
-          echo "Usuário $USERNAME criado com senha fixa $PASSWORD"
+      - name: Configure Locale and Timezone (Brazil)    
+        run: |    
+          # Definir idioma, teclado e região para PT-BR    
+          Set-WinSystemLocale -SystemLocale pt-BR    
+          Set-WinUserLanguageList -LanguageList pt-BR -Force    
+          Set-WinUILanguageOverride -Language pt-BR    
+          Set-WinCultureFromLanguageListOptOut -OptOut 0    
 
-      - name: Instalar e conectar ao Tailscale
-        run: |
-          curl -fsSL https://tailscale.com/install.sh | sh
-          sudo tailscale up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=ubuntu-rdp-${GITHUB_RUN_ID}
-          sleep 10
-          TS_IP=$(tailscale ip -4 | head -n 1)
-          echo "TAILSCALE_IP=$TS_IP" >> $GITHUB_ENV
-          echo "Conectado ao Tailscale com IP $TS_IP"
+          # Fuso horário de Brasília (GMT-3)    
+          Set-TimeZone -Id "E. South America Standard Time"    
 
-      - name: Configurar XRDP e sessão XFCE
-        run: |
-          sudo ufw allow 3389/tcp || true
-          echo xfce4-session > ~/.xsession
-          sudo systemctl restart xrdp
-          echo "XRDP e XFCE configurados."
+          # Configurar teclado ABNT2    
+          $LangList = New-WinUserLanguageList pt-BR    
+          $LangList[0].InputMethodTips.Add("0416:00010416")    
+          Set-WinUserLanguageList $LangList -Force    
 
-      - name: Mostrar informações de acesso
-        run: |
-          echo ""
-          echo "=========================================="
-          echo " 🖥️  Ubuntu XRDP via Tailscale está pronto!"
-          echo "------------------------------------------"
-          echo "  IP Address: $TAILSCALE_IP"
-          echo "  Username:   $RDP_USERNAME"
-          echo "  Password:   $RDP_PASSWORD"
-          echo "------------------------------------------"
-          echo " Conecte-se via RDP (porta 3389) usando o IP acima."
-          echo " Selecione a sessão: XFCE Session"
-          echo "=========================================="
-          echo ""
+      - name: Install NVIDIA GPU Drivers    
+        run: |    
+          $url = "https://us.download.nvidia.com/Windows/536.23/536.23-desktop-win10-win11-64bit-international-dch-whql.exe"    
+          $driver = "$env:TEMP\nvidia_driver.exe"    
+          Invoke-WebRequest -Uri $url -OutFile $driver    
+          Start-Process -FilePath $driver -ArgumentList "-s","-noreboot" -Wait    
+          Remove-Item $driver -Force    
 
-      - name: Manter sessão ativa
-        run: |
-          echo "Sessão RDP ativa. Pare o workflow para encerrar."
-          while true; do sleep 300; done
+      - name: Ultra Optimize Windows Performance    
+        run: |    
+          # Desativar animações, efeitos visuais e atrasos    
+          reg add "HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\VisualEffects" /v VisualFXSetting /t REG_DWORD /d 2 /f    
+          Set-ItemProperty "HKCU:\Control Panel\Desktop" -Name "UserPreferencesMask" -Value ([byte[]](0x90,0x12,0x03,0x80))    
+          Set-ItemProperty "HKCU:\Control Panel\Desktop" -Name "MenuShowDelay" -Value "0"    
+          Set-ItemProperty "HKCU:\Control Panel\Desktop" -Name "WaitToKillAppTimeout" -Value "2000"    
+          Set-ItemProperty "HKCU:\Control Panel\Desktop" -Name "HungAppTimeout" -Value "1000"    
+
+          # Desligar serviços desnecessários    
+          $services = "DiagTrack","WSearch","Spooler"    
+          foreach ($s in $services) {    
+              Stop-Service -Name $s -ErrorAction SilentlyContinue    
+              Set-Service -Name $s -StartupType Disabled -ErrorAction SilentlyContinue    
+          }    
+
+          # Desligar efeitos da barra e transparências    
+          reg add "HKCU\Software\Microsoft\Windows\CurrentVersion\Themes\Personalize" /v EnableTransparency /t REG_DWORD /d 0 /f    
+          reg add "HKCU\Software\Microsoft\Windows\CurrentVersion\Themes\Personalize" /v ColorPrevalence /t REG_DWORD /d 0 /f    
+
+      - name: Install Tailscale    
+        run: |    
+          $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-latest-amd64.msi"    
+          $installerPath = "$env:TEMP\tailscale.msi"    
+          Invoke-WebRequest -Uri $tsUrl -OutFile $installerPath    
+          Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/quiet", "/norestart" -Wait    
+          Remove-Item $installerPath -Force    
+
+      - name: Establish Tailscale Connection    
+        run: |    
+          & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-runner-$env:GITHUB_RUN_ID    
+          $tsIP = $null    
+          for ($i=0; $i -lt 10; $i++) {    
+            $tsIP = & "$env:ProgramFiles\Tailscale\tailscale.exe" ip -4    
+            if ($tsIP) { break }    
+            Start-Sleep -Seconds 5    
+          }    
+          if (-not $tsIP) { throw "No Tailscale IP found" }    
+          echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV    
+
+      - name: Show Access Info    
+        run: |    
+          Write-Host "`n=== RDP ACCESS ==="    
+          Write-Host "Address: $env:TAILSCALE_IP"    
+          Write-Host "Username: RDP"    
+          Write-Host "Password: 882188Adr"    
+          Write-Host "🌎 Região configurada: Brasil (pt-BR)"    
+          Write-Host "⏰ Fuso horário: Brasília (GMT-3)"    
+          Write-Host "⌨️ Teclado: ABNT2"    
+          Write-Host "✅ GPU driver installed"    
+          Write-Host "✅ Windows ultra optimized"    
+          Write-Host "✅ Tailscale ready"    
+          Write-Host "==================`n"    
+          while ($true) { Start-Sleep -Seconds 300 }
